--- a/Ri_Happy_Projetos/Projetos/Jogo_da_Memoria/index.html
+++ b/Ri_Happy_Projetos/Projetos/Jogo_da_Memoria/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="./src/styles/main.css">
 </head>
 <body> 
+    <div class="sleigh"></div>
     <div class="snow"></div>
     <div class="container">
         <h2>JOGO DA MEMÓRIA</h2>
